# egui

./: Cargo.toml  build.gradle  build.rs  intip.sh
.github/workflows/: build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: styles.xml
egui_keyboard/: Cargo.toml  lib.rs
egui_keyboard/src/: lib.rs
src/: lib.rs  main_ui.slint  server.rs  state.rs  theme.rs  ui.rs
src/features/: calculator.rs  counter_feature.rs  crud_feature.rs  kasir.rs  mod.rs  motion.rs  odfiz_pos.rs  server.rs
src/mods/: mod.rs
src/mods/actors/: mod.rs
src/mods/logic/: mod.rs
src/ui/: canvas.rs  mod.rs  timeline.rs  viewer.rs
