[package]
name = "odfiz_slint"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Kita pakai versi 1.15.1 tapi biarkan default renderer agar tidak error draw_path
slint = { version = "1.15.1", features = ["compat-1-2", "backend-android-activity-06"] }

[build-dependencies]
slint-build = "1.15.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
