[package]
name = "odfiz_slint"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
slint = { version = "1.15.1", features = ["compat-1-2", "backend-android-activity-06"] }

[build-dependencies]
slint-build = "1.15.1"

# OPTIMASI SIZE & SPEED
[profile.release]
opt-level = "z"        # Fokus pada ukuran binary terkecil
lto = true             # Link Time Optimization (buang fungsi tak terpakai)
codegen-units = 1      # Optimasi maksimal (satu unit kompilasi)
panic = "abort"        # Buang overhead error tracking
strip = true           # Hapus semua simbol debug
